...
      <TextField
        label={s.searchPlaceholder}
        hideLabel
        placeholder={s.searchPlaceholder}
        value={text}
        onChangeText={setText}
        testID="list.events.search"
      />
      {searching ? (
        <View>
          <Text variant="label">{s.results}</Text>
          {search.isPending ? (
            <ActivityIndicator style={styles.loading} />
...
